add recipe section

--- a/lesson-15/furniture.html
+++ b/lesson-15/furniture.html
@@ -39,7 +39,8 @@
             <div class="f-header__search-basket search-basket">
                <form action="#" method="GET" class="search-basket__form-search"
                   enctype="multipart/form-data">
-                  <input class="search-basket__input" type="text">
+                  <input class="search-basket__input" type="text"
+                     placeholder=" ">
                   <div class="search-basket__decor-input"></div>
                   <button class="search-basket__search-btn" type="submit">
                      <svg class="search-basket__icon icon-search" width="18"
