--- a/lesson-16/index.html
+++ b/lesson-16/index.html
@@ -29,6 +29,10 @@
                   <a class="nav__link" href="models.html#call-back">Call
                      Back</a>
                </li>
+               <li class="nav__item">
+                  <a class="nav__link" href="models.html#add-recipe">Add
+                     recipe</a>
+               </li>
             </ul>
          </div>
       </header>
@@ -279,6 +283,11 @@
                <li class="nav__item">
                   <a class="nav__link" href="models.html#call-back">Call
                      Back</a>
+               </li>
+               <li class="nav__item">
+                  <a class="nav__link" href="models.html#add-recipe">Add
+                     recipe</a>
+               </li>
             </ul>
             <p class="footer__name">Fedorova Nataliya</p>
          </div>
