--- a/lesson-17/index.html
+++ b/lesson-17/index.html
@@ -289,7 +289,8 @@
                            </div>
                            <div class="cards__info-block">
                               <h4 class="cards__title">Clients</h4>
-                              <p class="cards__text">Quick Response</p>
+                              <p class="cards__text">Quick Response
+                              </p>
                            </div>
                         </div>
                      </div>
