--- a/lesson-16/models.html
+++ b/lesson-16/models.html
@@ -1175,7 +1175,8 @@
                      recipe</a>
                </li>
             </ul>
-            <p class="footer__name">Fedorova Nataliya</p>
+            <p class="footer__name">Fedorova Nataliya
+            </p>
          </div>
       </footer>
    </div>
