add cookies section

--- a/lesson-17/index.html
+++ b/lesson-17/index.html
@@ -352,6 +352,172 @@
             </div>
             <div class="fourth-model__right-path"></div>
          </div>
+         <div class="fifth-model">
+            <div class="fifth-model__container">
+               <h2 class="fifth-model__title title">
+                  <span class="font-family-accent">Our</span>
+                  <span>Cookie Collection</span>
+               </h2>
+               <div class="fifth-model__list cookies">
+                  <div class="cookies__item">
+                     <a href="#" class="cookies__img-link">
+                        <img src="img/fifth-model/webp/img-1.webp" alt="cookie">
+                     </a>
+                     <div class="cookies__text-content">
+                        <h3 class="cookies__name font-family-accent">
+                           <a class="cookies__link-name" href="#">Natus possimus
+                              nihil</a>
+                        </h3>
+                        <div class="cookies__about">
+                           <p>Lorem ipsum dolor sit, amet
+                              consectetur adipisicing elit. Natus possimus nihil
+                              itaque voluptate placeat numquam voluptatum ipsa.
+                           </p>
+                        </div>
+                        <div class="cookies__buttons buttons-cookies">
+                           <button class="buttons-cookies__btn"
+                              type="button">About
+                              product</button>
+                           <button class="buttons-cookies__btn"
+                              type="button">Add
+                              to card</button>
+                        </div>
+                     </div>
+
+                  </div>
+                  <div class="cookies__item">
+                     <a href="#" class="cookies__img-link">
+                        <img src="img/fifth-model/webp/img-2.webp" alt="cookie">
+                     </a>
+                     <div class="cookies__text-content">
+                        <h3 class="cookies__name font-family-accent">
+                           <a class="cookies__link-name" href="#">Natus possimus
+                              nihil</a>
+                        </h3>
+                        <div class="cookies__about">
+                           <p>Lorem ipsum dolor sit, amet
+                              consectetur adipisicing elit. Natus possimus nihil
+                              itaque voluptate placeat numquam voluptatum ipsa.
+                           </p>
+                        </div>
+                        <div class="cookies__buttons buttons-cookies">
+                           <button
+                              class="buttons-cookies__btn buttons-cookies__btn--dark"
+                              type="button">About
+                              product</button>
+                           <button class="buttons-cookies__btn"
+                              type="button">Add
+                              to card</button>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="cookies__item">
+                     <a href="#" class="cookies__img-link">
+                        <img src="img/fifth-model/webp/img-3.webp" alt="cookie">
+                     </a>
+                     <div class="cookies__text-content">
+                        <h3 class="cookies__name font-family-accent">
+                           <a class="cookies__link-name" href="#">Natus possimus
+                              nihil</a>
+                        </h3>
+                        <div class="cookies__about">
+                           <p>Lorem ipsum dolor sit, amet
+                              consectetur adipisicing elit. Natus possimus nihil
+                              itaque voluptate placeat numquam voluptatum ipsa.
+                           </p>
+                        </div>
+                        <div class="cookies__buttons buttons-cookies">
+                           <button
+                              class="buttons-cookies__btn buttons-cookies__btn--dark"
+                              type="button">About
+                              product</button>
+                           <button class="buttons-cookies__btn"
+                              type="button">Add
+                              to card</button>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="cookies__item">
+                     <a href="#" class="cookies__img-link">
+                        <img src="img/fifth-model/webp/img-4.webp" alt="cookie">
+                     </a>
+                     <div class="cookies__text-content">
+                        <h3 class="cookies__name font-family-accent">
+                           <a class="cookies__link-name" href="#">Natus possimus
+                              nihil</a>
+                        </h3>
+                        <div class="cookies__about">
+                           <p>Lorem ipsum dolor sit, amet
+                              consectetur adipisicing elit. Natus possimus nihil
+                              itaque voluptate placeat numquam voluptatum ipsa.
+                           </p>
+                        </div>
+                        <div class="cookies__buttons buttons-cookies">
+                           <button
+                              class="buttons-cookies__btn buttons-cookies__btn--dark"
+                              type="button">About
+                              product</button>
+                           <button class="buttons-cookies__btn"
+                              type="button">Add
+                              to card</button>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="cookies__item">
+                     <a href="#" class="cookies__img-link">
+                        <img src="img/fifth-model/webp/img-5.webp" alt="cookie">
+                     </a>
+                     <div class="cookies__text-content">
+                        <h3 class="cookies__name font-family-accent">
+                           <a class="cookies__link-name" href="#">Natus possimus
+                              nihil</a>
+                        </h3>
+                        <div class="cookies__about">
+                           <p>Lorem ipsum dolor sit, amet
+                              consectetur adipisicing elit. Natus possimus nihil
+                              itaque voluptate placeat numquam voluptatum ipsa.
+                           </p>
+                        </div>
+                        <div class="cookies__buttons buttons-cookies">
+                           <button
+                              class="buttons-cookies__btn buttons-cookies__btn--dark"
+                              type="button">About
+                              product</button>
+                           <button class="buttons-cookies__btn"
+                              type="button">Add
+                              to card</button>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="cookies__item">
+                     <a href="#" class="cookies__img-link">
+                        <img src="img/fifth-model/webp/img-6.webp" alt="cookie">
+                     </a>
+                     <div class="cookies__text-content">
+                        <h3 class="cookies__name font-family-accent">
+                           <a class="cookies__link-name" href="#">Natus possimus
+                              nihil</a>
+                        </h3>
+                        <div class="cookies__about">
+                           <p>Lorem ipsum dolor sit, amet
+                              consectetur adipisicing elit. Natus possimus nihil
+                              itaque voluptate placeat numquam voluptatum ipsa.
+                           </p>
+                        </div>
+                        <div class="cookies__buttons buttons-cookies">
+                           <button
+                              class="buttons-cookies__btn buttons-cookies__btn--dark"
+                              type="button">About
+                              product</button>
+                           <button class="buttons-cookies__btn"
+                              type="button">Add
+                              to card</button>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
       </main>
       <footer class="footer">
          <div class="footer__container">
