--- a/lesson-18/index.html
+++ b/lesson-18/index.html
@@ -13,15 +13,12 @@
    <div class="wrapper">
       <header class="header header--mb">
          <div class="header__container">
-            <div class="header__logo">Pretty Stones</div>
+            <div class="header__logo">your philosophy</div>
             <div class="menu">
                <div class="menu__body">
                   <ul class="menu__list">
                      <li class="menu__item">
-                        <a href="#" class="menu__link">Home</a>
-                     </li>
-                     <li class="menu__item">
-                        <a href="#" class="menu__link">Shop</a>
+                        <a href="#" class="menu__link">About us</a>
                      </li>
                      <li class="menu__item menu__item--parent">
                         <a href="#" class="menu__link">Product
@@ -52,9 +49,6 @@
                         <a href="#" class="menu__link">Blog</a>
                      </li>
                      <li class="menu__item">
-                        <a href="#" class="menu__link">Pages</a>
-                     </li>
-                     <li class="menu__item">
                         <a href="#" class="menu__link">Contact</a>
                      </li>
                   </ul>
@@ -79,12 +73,21 @@
       <main class="page page--mb">
          <div class="page__hero hero hero--mb">
             <div class="hero__container">
+               <div class="decor-line-left"></div>
+               <div class="decor-line-right"></div>
+               <div class="decor-img-left">
+                  <img src="img/hero/webp/hero-bg-img-1.webp" alt="image">
+               </div>
+               <div class="decor-img-right">
+                  <img src="img/hero/webp/hero-bg-img-2.webp" alt="image">
+
+               </div>
                <div class="hero__left-path left-path-hero">
-                  <h1 class="left-path-hero__title">Jewellery Collection</h1>
+                  <h1 class="left-path-hero__title">Exclusive Jewelry</h1>
                   <a href="#" class="left-path-hero__btn">Shop Now</a>
                </div>
                <div class="hero__img">
-                  <img src="img/hero/hero-img-3.webp" alt="woman">
+                  <img src="img/hero/webp/hero-img-1.webp" alt="img">
                </div>
                <div class="hero__right-path right-path-hero">
                   <p class="right-path-hero__upper-content">
@@ -95,24 +98,16 @@
                      Handcrafted <br> & ethically Sources
                   </p>
                </div>
-               <div class="decor-line-left"></div>
-               <div class="decor-line-right"></div>
-               <div class="decor-img-left">
-                  <img src="img/hero/hero-img-1.webp" alt="image">
-               </div>
-               <div class="decor-img-right">
-                  <img src="img/hero/hero-img-2.webp" alt="image">
-               </div>
 
             </div>
          </div>
-         <div class="section section--mb">
-            <div class="section__container">
-               <div class="section__block-header block-header">
-                  <div class="block-header__label">WHAT WE DO</div>
-                  <h2 class="block-header__title">We Develop Create Custom
-                     Jewels.</h2>
-                  <div class="block-header__text">
+         <div class="about about--mb">
+            <div class="about__container">
+               <div class="about__block-header block-header">
+                  <div class="block-header__label">About Us</div>
+                  <h2 class="block-header__title">We design and create custom
+                     jewelry</h2>
+                  <div class="block-header__text block-header__text--about">
                      <p>Lorem ipsum dolor sit amet, conse elit, sedid do eiusmod
                         tempor incidi
                         ut labore
@@ -120,16 +115,25 @@
                      </p>
                   </div>
                </div>
+               <div class="about__img-block img-block">
+                  <div class="img-block__img img-block__img--small">
+                     <img src="img/about/about-img-1.webp" alt="img">
+                  </div>
+                  <div class="img-block__img img-block__img--large">
+                     <img src="img/about/about-img-2.webp" alt="img">
+                  </div>
+               </div>
             </div>
          </div>
       </main>
       <footer class="footer">
          <div class="footer__container">
-            <p>I`m footer</p>
+            <p class="footer__name">Fedorova Natalia</p>
          </div>
       </footer>
    </div>
+   <script src="js/js.js"></script>
 </body>
-<script src="js/js.js"></script>
+
 
 </html>
